# 105-stl-algorithms

./: 01-province_of_heaps.cpp  02-shore_of_sorting.cpp  03-region_of_partitioning.cpp  04-other_permutations.cpp  04_other_permutations.cpp  05-partitioning_sort_heap.cpp  06-numeric_algorithms.cpp  07-querying_a_property.cpp  CMakeLists.txt  README.md  common.h
