cmake_minimum_required(VERSION 3.17)
project(105_stl_algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(province_of_heaps 01-province_of_heaps.cpp)
add_executable(shore_of_sorting 02-shore_of_sorting.cpp)
add_executable(region_of_partitioning 03-region_of_partitioning.cpp)
add_executable(other_permutations 04_other_permutations.cpp)