cmake_minimum_required(VERSION 3.17)
project(105_stl_algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(01-province_of_heaps 01-province_of_heaps.cpp common.h)
add_executable(02-shore_of_sorting 02-shore_of_sorting.cpp common.h)
add_executable(03-region_of_partitioning 03-region_of_partitioning.cpp common.h)
add_executable(04-other_permutations 04-other_permutations.cpp common.h)
add_executable(05-partitioning_sort_heap 05-partitioning_sort_heap.cpp common.h)